fix(console): clean up spacing for section editor dialog

--- a/gravitee-apim-console-webui/src/portal/navigation-items/section-editor-dialog/section-editor-dialog.component.scss
+++ b/gravitee-apim-console-webui/src/portal/navigation-items/section-editor-dialog/section-editor-dialog.component.scss
@@ -7,7 +7,7 @@ $typography: map.get(gio.$mat-theme, typography);
 mat-dialog-content {
   display: flex;
   flex-flow: column;
-  gap: 16px;
+  gap: 8px;
 }
 
 .title {
